--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </table>>
 
  
-      <p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and  Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=206411">Shuai Li</a> (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling, rendering and all other relevant topics in computer graphics.</p>
+      <p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and  Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=206411">Shuai Li</a> (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling,machine learning and all other relevant topics in computer graphics. I am also interested in applying deeping learning methods to solve physical equations for efficient simulation. If everything goes well, I will graduate in April 2019.</p>
   
 
 <h3>
@@ -58,9 +58,9 @@
     <th>2012 - 2014</th>
     <td>
       <b>M.S. Eng.</b> in Computer Science and Engineering (recommended for admission to a program without exams)</br>
-       North China University of Water Resource and Electric Power, China </br> 
+       North China University of Water Resource and Electric Power, China(2012-2013) </br> 
        </p>
-       <b>Visiting Scholar</b> at State Key Laboratory of Virtual Reality Technology and Systems, Beihang University</br>
+       <b>Visiting Scholar</b> at State Key Laboratory of Virtual Reality Technology and Systems, Beihang University(2013-2014)</br>
     </td>
   </tr>
   <tr>
@@ -68,7 +68,7 @@
     <td>
       <b>B.S. Eng.</b> in Computer Science and Engineering</br>
       North China University of Water Resource and Electric Power, China</br>
-      GPA ranking: top 10% out of 150 students
+      
     </td>
   </tr>
  </table>
@@ -77,10 +77,7 @@
 <h3>
 <a id="publications" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications and Presentations</h3>
 
-<ul>
-  <li>
-
-    <b>A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</b>
+    <b>1. A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</b>
     <a href="http://dl.acm.org/citation.cfm?id=3095151"><strong>LINK</strong></a>  <a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf"><strong>PDF</strong></a></br>
     <u>Yang Gao</u>, Shuai Li, Hong Qin and Aimin Hao</br>
     Proceedings of the Computer Graphics International Conference (CGI), 2017</br>
@@ -88,14 +85,14 @@
     <tr>
     <th><a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/CGI2017.jpg" style="width:300px;height:180px;"></a></th>
     <td>
-    <b>Abstract:</b> We propose a novel integrated approach supporting the seamless unification of FLIP and shape matching. We devise new algorithms to tackle existing difficulties when handling new phenomena such as high-fidelity fluid-solid interaction and solid melting. The key innovation of this paper is a unified Lagrangian framework that seamlessly blends FLIP and PBD based shape matching constraint towards the natural yet strong coupling between fluid and deformable solid. Within our integrated framework, it enables many complicated fluid-solid phenomena with ease. We conduct various kinds of experiments. All the results demonstrate the advantages of our unified hybrid approach towards visual fidelity, efficiency, stability, and versatility.
+    <b>Abstract:</b> We propose a novel integrated approach supporting the seamless unification of FLIP and shape matching. The key innovation of this paper is a unified Lagrangian framework that seamlessly blends FLIP and PBD based shape matching constraint towards the natural yet strong coupling between fluid and deformable solid. Within our integrated framework, it enables many complicated fluid-solid phenomena with ease.
     </td>
     </tr>
     </table>
   </li>
 
   <li>
-    <b>Oral presentation at Computer Graphics International 2017 (Yokohama, Japan)</br></b>
+    <b>2. Oral presentation at Computer Graphics International 2017 (Yokohama, Japan)</br></b>
     <i>"A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods"</i>
   </li>
 </ul>
@@ -103,7 +100,7 @@
 <ul>
   <li>
 
-    <b>An efficient heat-based model for solid-liquid-gas phase transition and dynamic interaction</b>
+    <b>3. An efficient heat-based model for solid-liquid-gas phase transition and dynamic interaction</b>
     <a href="http://www.sciencedirect.com/science/article/pii/S1524070317300589#!"><strong>LINK</strong></a>  <a href="https://ac.els-cdn.com/S1524070317300589/1-s2.0-S1524070317300589-main.pdf?_tid=be6bf648-aff3-11e7-8aca-00000aacb362&acdnat=1507884887_66ae5261a2e5e0c698567e3d87d04785"><strong>PDF</strong></a></br>
     <u>Yang Gao</u>, Shuai Li, Lipeng Yang, Hong Qin and Aimin Hao</br>
    Graphical Models, Volume 94, November 2017, Pages 14-24</br>
@@ -111,7 +108,7 @@
     <tr>
     <th><a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"><img src="./images/GMOD.jpg" style="width:300px;height:180px;"></a></th>
     <td>
-    <b>Abstract:</b> This paper details a simplified temperature-based model to animate the phase transitions and their dynamic interactions by integrating the latent heat model with relevant governing physical laws. On the numerical aspect, our framework supports a new algorithm aiming at tight coupling of heat transfer and multiphase FLIP-based fluids. Specifically for liquid-gas phase transition, we take into account the dissolved gas involved in liquid which further enhances the bubble generation effects. Besides the unique feature of heat transfer, we also devise a SPH-FLIP coupled model to simulate sub-grid bubbles, which enables three-phase dynamic interactions among solid, liquid, and gas. 
+    <b>Abstract:</b> This paper details a simplified temperature-based model to animate the phase transitions and their dynamic interactions by integrating the latent heat model with relevant governing physical laws. On the numerical aspect, our framework supports a new algorithm aiming at tight coupling of heat transfer and multiphase FLIP-based fluids. Specifically for liquid-gas phase transition, we take into account the dissolved gas involved in liquid which further enhances the bubble generation effects.  
     </td>
     </tr>
     </table>
@@ -131,16 +128,48 @@
 <table>
   <tr>
     <th width="90px">2015.09 - 2016.01</th>
-    <td><b>Teaching Assistant</b> </br><i>Algorithm and Data Structure</i> at Beihang University</td>
+    <td><b>Teaching Assistant</b> </br><i>Algorithm and Data Structure </i> at Beihang University</td>
       </tr>
 </table>
 <table>
   <tr>
     <th width="90px">2016.09 - 2017.01</th>
-    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language</i> at Beihang University</td>
+    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C/C++)</i> at Beihang University</td>
+  </tr>
+</table>
+<table>
+  <tr>
+    <th width="90px">2017.09 - 2018.01</th>
+    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C/C++)</i> at Beihang University</td>
+  </tr>
+</table>
+<table>
+  <tr>
+    <th width="90px">2018.09 - </th>
+    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C/C++)</i> at Beihang University</td>
   </tr>
 </table>
 <h3>
+
+ <a id="awards" class="anchor" href="#authorss" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards</h3>
+<table>
+  <tr>
+    <th width="90px">2015/2016 </th>
+    <td><b>Teaching Assistant</b> </br><i>First-class academic scholarship </td>
+  </tr>
+</table>
+<table>
+  <tr>
+    <th width="90px">2017</th>
+    <td><b>Teaching Assistant</b> </br><i>Excellent Foundation of BUAA for PhD students</td>
+  </tr>
+</table>
+<table>
+  <tr>
+    <th width="90px">2017</th>
+    <td><b>Teaching Assistant</b> </br><i> National Graduate Scholarship </td>
+  </tr>
+</table>
 
 <a id="awards" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards and  Invention Patent </h3>
 <table>
