--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html>
+
 <html>
   <head>
     <meta charset='utf-8'>
@@ -17,7 +17,28 @@
     <title>Yang Gao's homepage</title>
   </head>
 
-  <body class="layout-center has-menu" alog-page-type="6">
+
+
+  <div class="container-fluid">
+   <div class="collapse navbar-collapse" id="navbar-collapse-1">
+    <ul class="nav navbar-nav navbar-right">
+    <a href="/">Home</a>
+    <!-- <li><a href="/team">Team</a></li> -->
+    <!-- <li><a href="/vacancies">Vacancies</a></li> -->
+    <a href="/publications">Publications</a>
+    <!-- <li><a href="/people">People</a></li> -->
+  <a href="/CV.pdf">CV</a>
+  
+
+    <!-- <li><a href="/pictures">(Pics)</a></li> -->
+    </ul>
+  </div>
+  </div>
+</div>
+
+
+  <body class="layout-center has-menu" alog-page-type="5">
+
     <div id="body" class="container">
   <table>
   <tr>
@@ -30,257 +51,108 @@
        <div class="inner">
      
         <h1>Yang Gao  (高阳)</h1>
-        <h4>Ph.D. candidate<br/>
+        <h4>Assistant Professor<br/>
           SKL. VR Technology and Systems<br/>
           <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a><br/>
-         <b>Email:</b>  <a href="mailto:gaoyang_vr@buaa.edu.cn">gaoyang_vr@buaa.edu.cn</a>; <a href="mailto:gaoyang2963@163.com">gaoyang2963@163.com</a></p>
+         <b>Email:</b> <a href="mailto:gaoyangvr@buaa.edu.cn">gaoyangvr@buaa.edu.cn</a></p>
          </td>
   </tr>
-</table>>
+</table>
 
  
-      <p>I'm currently a Ph.D. candidate in computer science at the <a href="http://vrlab.buaa.edu.cn/">State Key Laboratory of Virtual Reality Technology and Systems </a>(SKL. VR Technology and Systems, 虚拟现实技术与系统国家重点实验室) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and  Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=206411">Shuai Li</a> (李帅 教授), and I am in long-term collaboration with Prof. <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling,machine learning and all other relevant topics in computer graphics. I am also interested in applying deeping learning methods to solve physical equations for efficient simulation. If everything goes well, I will graduate in April 2019.</p>
+      <p>I'm currently an assistant Professor in computer science at the <a href="http://vrlab.buaa.edu.cn/">State Key Laboratory of Virtual Reality Technology and Systems </a>(SKL. VR Technology and Systems, 虚拟现实技术与系统国家重点实验室) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. Prior to this, I received a PhD degree from Beihang University in 2019, supervised by Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授), and I am in long-term collaboration with Prof. <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Hong Qin</a> (秦洪 教授). My research interests include, realistic fluid animation, 3D modelig.</p>
   <p>Here's my cv in <a href=".\GaoYang.pdf">English</a> and <a href=".\高阳简历.pdf">Chinese</a>.</p>
 
-<h3>
-<a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
+</li>
 
-<table>
-  <tr>
-    <th width="90px">2014 - Now</th>
-    <td>
-      <b>Ph.D. candidate</b> in Computer Science</br>
-      Beihang University, China</br>
-      Advisors: Prof. Aimin Hao, Prof. Shuai Li and Prof. Hong Qin
-    </td>
-  </tr>
-    <tr>
-    <th>2012 - 2014</th>
-    <td>
-      <b>M.S. Eng.</b> in Computer Science and Engineering (recommended for admission to a program without exams)</br>
-       North China University of Water Resource and Electric Power, China(2012-2013) </br> 
-       </p>
-       <b>Visiting Scholar</b> at State Key Laboratory of Virtual Reality Technology and Systems, Beihang University(2013-2014)</br>
-    </td>
-  </tr>
-  <tr>
-    <th>2008 - 2012</th>
-    <td>
-      <b>B.S. Eng.</b> in Computer Science and Engineering</br>
-      North China University of Water Resource and Electric Power, China</br>
-      
-    </td>
-  </tr>
- </table>
-
-
-<h3>
- <ul>
-  <li>
-<a id="publications" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications and Presentations</h3>
-
-    <b>1. A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</b>
-    <a href="http://dl.acm.org/citation.cfm?id=3095151"><strong>LINK</strong></a>  <a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf"><strong>PDF</strong></a></br>
-    <u>Yang Gao</u>, Shuai Li, Hong Qin and Aimin Hao</br>
-    Proceedings of the Computer Graphics International Conference (CGI), 2017</br>
-    <table>
-    <tr>
-    <th><a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/CGI2017.jpg" style="width:300px;height:180px;"></a></th>
-    <td>
-    <b>Abstract:</b> We propose a novel integrated approach supporting the seamless unification of FLIP and shape matching. The key innovation of this paper is a unified Lagrangian framework that seamlessly blends FLIP and PBD based shape matching constraint towards the natural yet strong coupling between fluid and deformable solid. Within our integrated framework, it enables many complicated fluid-solid phenomena with ease.
-    </td>
-    </tr>
-    </table>
-  </li>
-   </ul>
-  
-
+<p><strong>Recent research interests:</strong></p>
 <ul>
-  <li>
-    <b>2. Oral presentation at Computer Graphics International 2017 (Yokohama, Japan)</br></b>
-    <i>"A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods"</i>
-  </li>
+    <li> Physics-based fluid modelling/simulation </li>
+    <li> VR + Rehabilitation </li>
+  <li>Data-driven based 3D reconstruction </li>
+  <li>VR+ Physiological signal (EEG/EMG)</li>
 </ul>
+</li>
+ 
+  <p><strong>Publications and Presentations</strong></p>
 
-<ul>
-  <li>
-    <b>3. An efficient heat-based model for solid-liquid-gas phase transition and dynamic interaction</b>
-    <a href="http://www.sciencedirect.com/science/article/pii/S1524070317300589#!"><strong>LINK</strong></a>  <a href="https://ac.els-cdn.com/S1524070317300589/1-s2.0-S1524070317300589-main.pdf?_tid=be6bf648-aff3-11e7-8aca-00000aacb362&acdnat=1507884887_66ae5261a2e5e0c698567e3d87d04785"><strong>PDF</strong></a></br>
-    <u>Yang Gao</u>, Shuai Li, Lipeng Yang, Hong Qin and Aimin Hao</br>
-   Graphical Models, Volume 94, November 2017, Pages 14-24</br>
-    <table>
-    <tr>
-    <th><a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"><img src="./images/GMOD.jpg" style="width:300px;height:180px;"></a></th>
-    <td>
-    <b>Abstract:</b> This paper details a simplified temperature-based model to animate the phase transitions and their dynamic interactions by integrating the latent heat model with relevant governing physical laws. On the numerical aspect, our framework supports a new algorithm aiming at tight coupling of heat transfer and multiphase FLIP-based fluids. Specifically for liquid-gas phase transition, we take into account the dissolved gas involved in liquid which further enhances the bubble generation effects.  
-    </td>
-    </tr>
-    </table>
-  </li>
-</ul>
+ <b>News</b></br>
 
- <ul>
-  <li>
-    <b>4. An Efficient FLIP and Shape Matching Coupled Method for Fluid-solid and Two-phase Fluid Simulations</b>
-    <a href="https://link.springer.com/article/10.1007%2Fs00371-018-1569-8"><strong>LINK</strong></a> </br>
-    <u>Yang Gao</u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao</br>
-   The visual computer, publised</br>
-    <table>
-    <tr>
-    <th><a href="https://youtu.be/7QDI7qHfVJM"><img src="./images/TVC18.png" style="width:300px;height:180px;"></a></th>
-    <td>
-    <b>Abstract:</b> In this paper, we propose a novel integrated approach supporting the seamless unification of FLIP and dynamic shape matching. We devise new algorithms to tackle existing difficulties when handling new phenomena such as high-fidelity fluid–solid interactions, solid deformations, melting and immiscible fluid coupling. Within our integrated framework, it enables many complicated fluid–solid phenomena with ease.  
-    </td>
-    </tr>
-    </table>
-  </li>
-</ul>
+<b>2020</b></br>
 
- <ul>
-  <li>
-    <b>5. Robust and Efficient SPH Simulation for High-speed Fluids with the Dynamic Particle Partitioning Method</b>
-    <a href="https://link.springer.com/article/10.1007%2Fs00371-018-1569-8"><strong>LINK</strong></a> </br>
-    Zhong Zheng, <u>Yang Gao</u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao (Co-First author)</br>
-   Pacific Graphics 2018, accept</br>
-    <table>
-    <tr>
-    <th><a href="https://youtu.be/RdFyBgftC_E"><img src="./images/PG2018.png" style="width:300px;height:180px;"></a></th>
-    <td>
-    <b>Abstract:</b> In this paper, we introduce a k-means clustering method into the SPH framework to dynamically partition fluid particles into two disjoint groups based on their velocities, we then use a two-scale time step scheme for these two types of particles. The smaller time steps are for particles with higher speed in order to preserve temporal details and guarantee the numerical stability. In contrast, the larger time steps are used for particles with smaller speeds to reduce the computational expense,and both types of particles are tightly coupled in the simulation. 
-      </tr>
-    </table>
-  </li>
-</ul>
+<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Lower Limb Balance Rehabilitation of Post-stroke Patients Using an Evaluating and Training Combined Augmented Reality System</strong>.<br />
+Shuwei Chen, Ben Hu, <u>Yang Gao*</u>, Zhiping Liao, Jianhua Li and Aimin Hao.  <br />
+IEEE International Symposium on Mixed and Augmented Reality (ISMAR), accepted (poster).
+<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+</br>
+   
+<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Accelerating Liquid Simulation With an Improved Data-Driven Method</strong>.<br />
+<u>Yang Gao*</u>, Quancheng Zhang, Shuai Li, Hong Qin and Aimin Hao.  <br />
+Computer Graphics Forum, 39(6): 180-191, 2020.
+<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+<br/></br><br/>
 
-<h3>
-<a id="service" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Service to University</h3>
-<table>
-  <tr>
-    <th width="250px">2014.09 - 2015.01 / 2015.09 - 2016.01</th>
-    <td><b>Teaching Assistant</b> </br><i>Algorithm and Data Structure</i> at Beihang University</td>
-     </tr>
-</table>
-<table>
-  <tr>
-    <th width="250px">2016.09 - 2017.01 / 2017.09 - 2018.01</th>
-    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C)</i> at Beihang University</td>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th width="250px">2015.11</th>
-    <td><b>Beijing</b> </br><i>Attended international conference VRST </i> at Beihang University</td>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th width="250px">2016.12</th>
-    <td><b>Macao</b> </br><i>Attended and demonstrated PCI simulator on SIGGRAPH Asia</i> </td>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th width="250px">2017.7</th>
-    <td><b>YOK</b> </br><i>Attended and make an oral presentation on CGI at Japan</i> </td>
-  </tr>
-</table>
-<h3>
-
- <h3>
- <a id="awards" class="anchor" href="#authorss" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards</h3>
-<table>
-  <tr>
-    <th width="90px">2015/2016 </th>
-    <td> </br><i>First-class academic scholarship </td>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th width="90px">2017</th>
-    <td></br><i> National Graduate Scholarship </td>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th width="90px">2018</th>
-    <td></br><i>Excellent Foundation of BUAA for PhD students</td>
-  </tr>
-</table>
+<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Dynamic Particle Partitioning SPH Model for High-speed Fluids Simulation</strong>.<br />
+<u>Yang Gao</u>,Zhong Zheng, Jin Li, Shuai Li*, Hong Qin and Aimin Hao.  <br />
+Graphical Models, 109: 101061, 2020.
+<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+</br></br></br></br>
 
 
-<h3>
-<a id="awards" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Invention Patent </h3>
-<table>
-  <tr>
-    <th width="90px"> Authorized</th>
-    <td>2016.<i>基于格子Boltzmann的流体可视化仿真方法(First student inventor)</i></td>
-    <td><i>2017.一种基于欧拉-拉格朗日耦合方法的流体仿真方法(First student inventor)</i></td>
-  </tr>
-  <tr>
-    <th>Substantive Examination</th>
-    <td>2015.<i>一种基于离散格子Boltzmann双分布模型的热流体仿真方法(First student inventor)</i></td>
-    <td>2015.<i>一种基于FLIP与Shape matching混合模型的不可融多相流仿真方法(First student inventor)</i></td>
-  </tr>
-  </table>
+<p><b>2019</b></br></p</p>
 
-<h3>
-<a id="skills" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
+<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>An efficient FLIP and shape matching coupled method for fluid–solid and two-phase fluid simulations</strong>.<br />
+<u>Yang Gao<sup>*</sup></sup></u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao.  <br />
+The Visual Computer, 35: 1741–1753, 2019.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+</br></br></br>
 
-<table>
-  <tr>
-    <th width="90px">Programming</th>
-    <td>
-      Proficient in C/C++ with CUDA</br>
-      Familiar with Python, OpenGL
-      </td>
-  </tr>
-  <tr>
-    <th>Renderer</th>
-    <td>MentalRay, Vray, POV-Ray and Blender</td>
-  </tr>
-  <tr>
-    <th>Software</th>
-    <td>Maya, Unity3D, 3DMax, Matlab and RealFlow</td>
-  </tr>
-  <tr>
-    <th>Language</th>
-    <td>
-      Chinese: native</br>
-      English: fluent, CET-6 score: 478
-    </td>
-  </tr>
-</table>
+<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>A Hybrid Method for Powdered Materials Modeling</strong>.<br />
+<u>Yang Gao<sup>*</sup></u>, Yinghao Xu, Shuai Li, Aimin Hao and Hong Qin.  <br />
+25th ACM Symposium on Virtual Reality Software and Technology, 14: 1–10, 2019.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+</br></br>
 
-<h3>
-<a id="colleagues" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Colleagues</h3>
+<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Real-time Simulation of Electrocautery Procedure using Mesh-free Methods in Laparoscopic Cholecystectomy</strong>.<br />
+Junjun Pan, Yuhan Yang, <u>Yang Gao</u>, Hong Qin and Yaqing Qi.  <br />
+The Visual Computer volume 35, pages861–872, 2019.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+</br></br></br>
 
-<table>
-  <tr>
-    <th width="90px"><a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Hong Qin</a></th>
-    <td>
-      Full Professor (with tenure) at Stony Brook University
-      </td>
-  </tr>
-  <tr>
-    <th><a href="http://hsiatsing.github.io/" class="user-mention">Qing Xia</a></th>
-    <td>Ph.D. candidate at Beihang University</td>
-  </tr>
-  <tr>
-    <th><a href="https://troyzhai.github.io/" class="user-mention">Xiao Zhai</a></th>
-    <td>Ph.D. candidate at Beihang University</td>
-  </tr>
-</table>
+<p><b>2018 and before</b></br></p</p>
 
-<p></p>
-      </section>
+<div> <a href="https://youtu.be/RdFyBgftC_E"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Robust and Efficient SPH Simulation for High-speed Fluids with the Dynamic Particle Partitioning Method</strong>.<br />
+Zhong Zheng, <u>Yang Gao</u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao (Co-First author).</br>
+Pacific Graphics 2018, 10.2312/pg.20181268 (short paper).  <br />
+.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+</br>
 
-      <footer>
-        <p><small>Hosted on GitHub Pages</small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    </h3>
-    </a>
-    </div>
+
+<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>A novel location awareness method for spot beam emitters</strong>.<br />
+Weicai Yang，Qing Chang，Hui Li，<u>Yang Gao</u>>，Lina Bao.</br>
+  IET Radar, Sonar & Navigation, 12(12): 1493-1499, 2018.  <br />
+.<a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf">[PDF]</a></div></div>
+</br>
+
+
+<div> <a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>An efficient heat-based model for solid-liquid-gas phase transition and dynamic interaction</strong>.<br />
+<u>Yang Gao</u>, Shuai Li, Lipeng Yang, Hong Qin and Aimin Hao.</br>
+Graphical Models, 94: 14-24, 2017.  <br />
+.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+</br></br>
+
+<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</strong>.<br />
+<u>Yang Gao</u>, Shuai Li,  Aimin Hao and Hong Qin.</br>
+ Proceedings of the Computer Graphics International Conference (CGI), 2017.  <br />
+.<a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf">[PDF]</a></div></div>
+</br>
+
    </body>
 </html>
