--- a/index.html
+++ b/index.html
@@ -127,32 +127,33 @@ The Visual Computer volume 35, pages861–872, 2019.<a href="./papers/2015-pgsho
 <div> <a href="https://youtu.be/RdFyBgftC_E"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Robust and Efficient SPH Simulation for High-speed Fluids with the Dynamic Particle Partitioning Method</strong>.<br />
 Zhong Zheng, <u>Yang Gao</u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao (Co-First author).</br>
-Pacific Graphics 2018, 10.2312/pg.20181268 (short paper).  <br />
-.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+Pacific Graphics 2018, 10.2312/pg.20181268 (short paper). 
+<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
 </br>
 
 
 <div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>A novel location awareness method for spot beam emitters</strong>.<br />
 Weicai Yang，Qing Chang，Hui Li，<u>Yang Gao</u>>，Lina Bao.</br>
-  IET Radar, Sonar & Navigation, 12(12): 1493-1499, 2018.  <br />
-.<a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf">[PDF]</a></div></div>
+  IET Radar, Sonar & Navigation, 12(12): 1493-1499, 2018.  
+<a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf">[PDF]</a></div></div>
 </br>
 
 
 <div> <a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>An efficient heat-based model for solid-liquid-gas phase transition and dynamic interaction</strong>.<br />
 <u>Yang Gao</u>, Shuai Li, Lipeng Yang, Hong Qin and Aimin Hao.</br>
-Graphical Models, 94: 14-24, 2017.  <br />
-.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+Graphical Models, 94: 14-24, 2017.  
+<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
 </br></br>
 
 <div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</strong>.<br />
 <u>Yang Gao</u>, Shuai Li,  Aimin Hao and Hong Qin.</br>
- Proceedings of the Computer Graphics International Conference (CGI), 2017.  <br />
-.<a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf">[PDF]</a></div></div>
+ Proceedings of the Computer Graphics International Conference (CGI), 2017.
+<a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf">[PDF]</a></div></div>
 </br>
+
 
    </body>
 </html>
