--- a/index.html
+++ b/index.html
@@ -80,79 +80,81 @@
 
 <b>2020</b></br>
 
-<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/ISMAR.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Lower Limb Balance Rehabilitation of Post-stroke Patients Using an Evaluating and Training Combined Augmented Reality System</strong>.<br />
 Shuwei Chen, Ben Hu, <u>Yang Gao*</u>, Zhiping Liao, Jianhua Li and Aimin Hao.  <br />
 IEEE International Symposium on Mixed and Augmented Reality (ISMAR), accepted (poster).
-<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+<a href="./papers/ISMR2020.pdf">[PDF]</a></div></div>
 </br>
    
-<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/CGF2020.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Accelerating Liquid Simulation With an Improved Data-Driven Method</strong>.<br />
 <u>Yang Gao*</u>, Quancheng Zhang, Shuai Li, Hong Qin and Aimin Hao.  <br />
 Computer Graphics Forum, 39(6): 180-191, 2020.
-<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+<a href="./papers/CGF2020.pdf">[PDF]</a></div></div>
 <br/></br><br/>
 
-<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/GM2020.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Dynamic Particle Partitioning SPH Model for High-speed Fluids Simulation</strong>.<br />
 <u>Yang Gao</u>,Zhong Zheng, Jin Li, Shuai Li*, Hong Qin and Aimin Hao.  <br />
 Graphical Models, 109: 101061, 2020.
-<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+<a href="./papers/GM2020.pdf">[PDF]</a></div></div>
 </br></br></br></br>
 
 
 <p><b>2019</b></br></p</p>
 
-<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/TVC18.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>An efficient FLIP and shape matching coupled method for fluid–solid and two-phase fluid simulations</strong>.<br />
 <u>Yang Gao<sup>*</sup></sup></u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao.  <br />
-The Visual Computer, 35: 1741–1753, 2019.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+The Visual Computer, 35: 1741–1753, 2019.<a href="./papers/TVC2019.pdf">[PDF]</a></div></div>
 </br></br>
 
-<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/VRST2019.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>A Hybrid Method for Powdered Materials Modeling</strong>.<br />
 <u>Yang Gao<sup>*</sup></u>, Yinghao Xu, Shuai Li, Aimin Hao and Hong Qin.  <br />
-25th ACM Symposium on Virtual Reality Software and Technology, 14: 1–10, 2019.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+25th ACM Symposium on Virtual Reality Software and Technology, 14: 1–10, 2019.<a href="./papers/VRST2019.pdf">[PDF]</a></div></div>
 </br></br>
 
-<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/TVC2019YYH.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Real-time Simulation of Electrocautery Procedure using Mesh-free Methods in Laparoscopic Cholecystectomy</strong>.<br />
 Junjun Pan, Yuhan Yang, <u>Yang Gao</u>, Hong Qin and Yaqing Qi.  <br />
-The Visual Computer volume 35, pages861–872, 2019.<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+The Visual Computer volume 35, pages861–872, 2019.<a href="./papers/TVC2019YHH.pdf">[PDF]</a></div></div>
 </br></br>
 
 <p><b>2018 and before</b></br></p</p>
 
-<div> <a href="https://youtu.be/RdFyBgftC_E"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://youtu.be/RdFyBgftC_E"> <img src="./images/PG2018.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Robust and Efficient SPH Simulation for High-speed Fluids with the Dynamic Particle Partitioning Method</strong>.<br />
 Zhong Zheng, <u>Yang Gao</u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao (Co-First author).</br>
 Pacific Graphics 2018, 10.2312/pg.20181268 (short paper). 
-<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+<a href="./papers/PG2018.pdf">[PDF]</a></div></div>
 </br></br>
 
-<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div>  <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;">
 <div><strong>A novel location awareness method for spot beam emitters</strong>.<br />
 Weicai Yang，Qing Chang，Hui Li，<u>Yang Gao</u>>，Lina Bao.</br>
   IET Radar, Sonar & Navigation, 12(12): 1493-1499, 2018.  
-<a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf">[PDF]</a></div></div>
+<a href="http://https://ieeexplore.ieee.org/document/8567862/">[PDF]</a></div></div>
 </br></br>
 
 
 
-<div> <a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"> <img src="./images/GMOD.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>An efficient heat-based model for solid-liquid-gas phase transition and dynamic interaction</strong>.<br />
 <u>Yang Gao</u>, Shuai Li, Lipeng Yang, Hong Qin and Aimin Hao.</br>
 Graphical Models, 94: 14-24, 2017.  
-<a href="./papers/2015-pgshort-modal-subdivision.pdf">[PDF]</a></div></div>
+<a href="./papers/GM2017.pdf">[PDF]</a></div></div>
 </br></br>
 
-<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"> <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"> <img src="./images/CGI2017.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</strong>.<br />
 <u>Yang Gao</u>, Shuai Li,  Aimin Hao and Hong Qin.</br>
  Proceedings of the Computer Graphics International Conference (CGI), 2017.
 <a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf">[PDF]</a></div></div>
 </br>
+
+
 
 
 
